# splash_flows_globus

./: .env.example  .flake8  .gitignore  404.html  COPYWRITE  Dockerfile  LICENSE  Makefile  README.md  config.yml  create_deployment_832_dispatcher.sh  create_deployment_832_hpss.sh  create_deployment_832_uber_flow.sh  create_deployment_test_pc_to_nersc.sh  create_deployments.sh  create_deployments_7011.sh  create_deployments_7012.sh  create_deployments_733.sh  create_deployments_832.sh  create_deployments_832_alcf.sh  create_deployments_832_grafana.sh  create_deployments_832_nersc.sh  index.html  init_prefect.sh  nersc_globus.py  process_new_832_file-deployment.yaml  prune_spot832-deployment.yaml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml  states.py  test_transfers-deployment.yaml  test_transfers_832-deployment.yaml  update_creds.py  utils.py
ALCF_compute_test/: config.yml
about/: index.html
alcf832/: index.html
als_orchestration.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
configuration/: index.html
deployments/: streaming.yaml
docs/: README_alcf832.md  bl7012.md  bl832_ALCF.md  globus.md  globus_endpoint.md
examples/: Tomopy_for_ALS.ipynb  alcf_compute_endpoint_test.py  launch_ptycho.py  sfapi_NerscClient_example.ipynb  start_job.ipynb  test_cc_auth.py  tiff_to_zarr.py
frontend/server/: main.py  pyproject.toml
getting_started/: index.html
glossary/: index.html
install/: index.html
nersc832/: index.html
orchestration/: config.py  globus.py  globus_flows_utils.py  globus_tomopy_flow_init.py  hpss.py  index.html  (+9 more)
(+154 files in other folders)
