[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "griffe>=1.6.0",
    "prefect~=2.0",
    "pydantic-settings>=2.8.1",
    "sfapi-client>=0.4.1",
]

[dependency-groups]
lint = ["ruff>=0.9.10"]


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["server"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]
